# piptemplate

./: .gitignore  README.md  pyproject.toml
WhiteoutPDF/: __init__.py  main.py
